# devcontainers

csharp/: dev_setup.sh  install_deps.sh
csharp/.devcontainer/: devcontainer.json
csharp/.githooks/: post-commit  pre-commit  pre-push
python/: dev_setup.sh  install_deps.sh  pyproject.toml
python/.devcontainer/: devcontainer.json
python/.githooks/: common.sh  pre-commit  pre-push
